# anafind

./: .gitignore  CMakeLists.txt  README.md
include/anafind/: Dictionary.hpp
src/anafind/: Dictionary.cpp
test/: BasicTest.cpp  TrieTest.cpp
test/dictionaries/: small.txt
